--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -1,29 +1,53 @@
 main{
     margin: 0 5%;
     margin-top: 5%;
-    background: rgb(189, 188, 188);
+    /* background: rgb(189, 188, 188); */
     padding: 5%;
 }
 #ceo_section{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: aqua;
+    /* background-color: aqua; */
     width: 100%;
     max-height: 80%;
-    height: 500px;
+    height: 100%;
 }
 .ceo_image{
     position: relative;
     width: 40%;
-    /* background-image: url('/images/4.jpg');
-    background-repeat: no-repeat; */
 }
 .ceo_info_container{
     font-size: 2rem;
     width: 40%;
+    min-width: 150px;   /* trying to be responsive */
 }
 h2.ceo_name{
     font-size: 3rem;
     text-align: center;
+}
+#grid_container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
+.members_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 30%;
+    height: 10%;
+    margin: 2% 5%;
+}
+.members_info p{
+    font-size: 1.5rem;
+}
+.members_image{
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 90%;
 }
