--- a/stylesheet/home.css
+++ b/stylesheet/home.css
@@ -1,33 +1,130 @@
-main #text_div{
-    margin-top: 10%;
-    text-align: center;
-
-    height: 400px;
+@import url('./navbar.css');
+*{
+    box-sizing: border-box;
+    font-family: 'Roboto';
 }
-main #text_div #peso_sign{
-    font-size: 6rem;
-}
-main #text_div #amount{
-    font-size: 3rem;
-}
-#balance {
-    padding: 5rem;
-}
-#other_container{
-    height: 30%;
+html{
     display: flex;
-    flex-wrap: nowrap;
-    align-content: space-around;
+    flex-direction: column;
+    padding: 1rem;
+    height: 100%;
+
+}
+body{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    height: 100%;
+    width: 100%;
 }
-#other_container div{
-    max-width: 100px;
-    max-height: 100px;
-    padding: 0;
-    margin: 5px 5%;
-    display: block;
+main{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
 }
-#other_container div a img{
-    max-width: 100%;
-    max-height: 100%;
+#wallet_tab{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: 60rem;
+    justify-content: space-between;
+    margin: 20px;
+    padding: 5px;
+}
+#wallet_tab a{
+    text-decoration: none;
+}
+#wallet_tab div{
+    background-color: transparent;
+    height: 40px;
+    width: 29.5rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color: #7650a1;
+}
+#wallet_tab div:hover{
+    outline: 2px solid #7650a1;
+}
+#selected_tab{
+    background-color: #7650a1 !important;
+    color: white !important;
+}
+#card{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    width: 60rem;
+    height: 30rem;
+    background-image: url('../images/card-01.svg');
+    background-size: cover;
+    border-radius: 30px;
+    color: white;
+    padding: 1rem;
+}
+#balance_visibility{
+    position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    left: 0;
+    padding: 2rem;
+}
+#balance_visibility button{
+    width: 2.2rem;
+    height: 1.5rem;
+    background-color: transparent;
+    border: none;
+    background-image: url('../images/eye_open.svg');
+    background-size: cover;
+}
+#in_out{
+    display: flex;
+    flex-direction: row;
+    bottom: 5rem;
+    justify-content: space-evenly;
+    gap: 20px;
+    left: 0;
+    width: 60rem;
+    padding: 20px;
+    padding-left: 0;
+    padding-right: 0;
+}
+#in_out div{
+    position: relative;
+    display: flex;
+    background-color: #7650a1;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    height: 5rem;
+    width: 30rem;
+    border-radius: 30px;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+h1{
+    text-align: center;
+}
+#peso_sign{
+    font-size: 8rem;
+    font-weight: 400;
+}
+#amount{
+    font-size: 7rem;
+    font-weight: 400;
+    letter-spacing: 0.5rem;
+}
+#in_out img{
+    position: absolute;
+    left: 50px;
+    height: 30px;
+    width: 30px;
 }
