--- a/stylesheet/navbar.css
+++ b/stylesheet/navbar.css
@@ -6,7 +6,7 @@
     height: 50px;
     width: 50px;
     position: absolute;
-    left: 0;
+    left: 10px;
     border-radius: 100%;
 }
 nav{
@@ -19,6 +19,15 @@ nav{
     height: 50px;
     top: 10px;
     justify-content: center;
+}
+#navbar .icon{
+    position: absolute;
+    right: 10px;
+    height: 100%;
+}
+#navbar .icon img{
+    position: relative;
+    height: 100%;
 }
 #navigation a{
     font-size: 1.5rem;
