--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -4,7 +4,7 @@ main{
     /* background: rgb(189, 188, 188); */
     padding: 2% 5%;
 }   
-.ceo_section{
+.member_section{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -14,23 +14,29 @@ main{
     max-height: 80%;
     height: 100%;
     padding-bottom: 5%;
+    
 }
-.ceo_image{
+.member_image{
     position: relative;
+    border-radius: 30px;
     width: 30%;
+    max-height: 350px;
+    overflow-y: hidden;
 }
-.ceo_info_container{
+.member_info_container{
+    width: 50%;
+    min-width: 150px; 
+}
+h2.member_name{
     font-size: 2rem;
-    width: 40%;
-    min-width: 150px;   /* trying to be responsive */
-}
-h2.ceo_name{
-    font-size: 3rem;
     text-align: center;
 }
-
+.member_info p{
+    font-size: 1.5rem;
+    margin: 16px 0 0 0;
+}
 /* OLD RULES below are unused but kept anyway: */
-#grid_container{
+/* #grid_container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -53,4 +59,4 @@ h2.ceo_name{
     position: relative;
     width: 100%;
     height: 90%;
-}
+} */
